<resources>
    <string name="app_name">Assignment(Valentine App)#day14</string>
    <string name="history">If origin of Valentine\'s Day were a Facebook relationship status, it would read, It\'s complicated. Sure, today the meaning of Valentine\'s Day is entrenched in love and romance, bringing to mind boxes of chocolate, bouquets of flowers, romantic dinners, and heart-eye emojis. And for kids, it\'s all about those creative Valentine\'s Day boxes for collecting cards and heart-shaped treats at school. But when you delve into the history of the holiday we celebrate on February 14 well, things get a little murky, dark, and decidedly not for the faint of heart.If you have ever wondered who created Valentine\'s Day, is Valentine\'s Day a pagan holiday, or who was St. Valentine, anyway?—you\'re not alone, and as it turns out, even historians find themselves arguing the exact details. However, we can outline some basic Valentine\'s Day facts, plus a few legends, about its origins, from ancient Rome to the Middle Ages to the modern-day Valentine\’s Day we all know and love… or not, because gift-shopping for your valentine can be tough.</string>
    <string name="sagar">Sagar Khurrana Bhaiya is one of my inspiration as he is an Android Developer and from BCA like me.He has cracked multiple International Offers including Adjust.He is an Open-Source Contributor and Freelancer too.Completed over 65+ projects on Upwork and Fiverr.</string>
    <string name="phillip">Phillip Lackner is my favourite Youtuber-Native Android Developer.He is self taught developer.He explains all the stuff related to native android so well. </string>
    <string name="anuj_bhaiya">I am following Anuj Bhaiya from School Days.I got my interest in Android Development for first time when he launched a full beginner friendly Android Development Playlist on his Youtube Channel back in 2020.</string>
    <string name="saumya">Saumya Mam explains Android concepts so well.Mam is an open source contributor and freelancer since her college days. I come to know her from last 4–5 months while looking for Android Tutorials on Youtube.I accepted the 30dayschallenge of Android Development that helps me a lot to be consistent and learn new concepts so well.She explains every minute concepts from beginning so well that you can\'t forget.</string>
    <string name="inspiration_android">Inspiration(Android)</string>
    <string name="anshika">Anshu is one of my friends from school days.We were competitors(rank) from school days,but now we are good friends.She is an intelligent girl.She understand me well and helpful in nature.Our vibes matches a lot.I am happy to have a friend like her.</string>
    <string name="ajay">My Clan-AJAY(Ayush,Jatin,Aman and Yash) college friends.They all are helpful and we enjoy doing everything together from studying,celebrating and doing fun activities.They are like species that give an amazing taste to the college life.#JIGRIS</string>
    <string name="anu">Anu(my sister) is so caring,she is my crime partner.She is always by my side.I called her \'PILLU\' as she is cute and dangerous(when she complained to mom-dad) at the same point.I miss her a lot in my college.</string>
    <string name="bhai">My twin-brother(Adarsh) is my second crime partner.He is stronger than me.He is older than me.He always by my side.Loves to learn from me.He shares "kaafi saare secrets with me".We know each other so well.</string>
    <string name="mom">She is world to me.She cooks so well and know me more than myself.She loves me a lot.Like can\'t explain in words.Best Mom in the world</string>
    <string name="papa">My Dad loves me a lot.For moments,he scold me but it is all for my welfare.He wanted to see me successful.He did not believe in showing love,but I know him.Always acts a backbone for me.Best Papa in the world</string>
</resources>